--- a/proj002_bookclubcouple(simples) - quase finalizado.html
+++ b/proj002_bookclubcouple(simples) - quase finalizado.html
@@ -19,9 +19,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Clube do Livro</title>
 
-    <link rel="shortcut icon" href="./media/img/bookcouple-favicon.png" sizes="16x16 32x32 64x64 196x196" type="image/x-icon">
+    <link rel="shortcut icon" href="/bookcouple-favicon.png" sizes="16x16 32x32 64x64 196x196" type="image/x-icon">
     <!--Aprende como redimensionar tamanho do favicon-->
-    <link rel="stylesheet" href="./style/proj002_bookclubcouple(simples).css">
+    <link rel="stylesheet" href="/proj002_bookclubcouple(simples).css">
 </head>
 <body>
     
@@ -31,7 +31,7 @@
         </h2>
 
         <div class="imagem_central">
-            <img src="./media/img/foto_juntos_bookclub.jpg" alt="" id="foto_juntos">
+            <img src="/foto_juntos_bookclub.jpg" alt="" id="foto_juntos">
         </div>
 
         <h3 class="submain-texts">
